# freya

./: .dockerignore  .env  .gitignore  .ignore  .prettierrc.json  Cargo.toml  Dockerfile  Justfile  LICENSE  angular.json  build.rs  dev.sh  en.ftl  eslint.config.js  fela.db  freya.db  package-lock.json  package.json  readme.md  tsconfig.app.json  tsconfig.eslint.json  tsconfig.spec.json
migrate/: Cargo.toml
migrate/sql/: 0001-init.sql  0002-files.sql  0003-library.sql  0004-chapters.sql
migrate/src/: lib.rs
migrations/: 20240410153600_init.sql
server/: main.rs  state.rs
server/api/: account.rs  admin.rs  authentication.rs  books.rs  fs.rs  mod.rs  response.rs  user.rs
server/auth/: mod.rs  password.rs  session.rs
server/database/: book.rs  chapter.rs  library.rs  mod.rs  session.rs
server/database/fixtures/: book.sql  user.sql
server/fs/: path.rs  storage.rs
server/media/: cover.rs  ffmpeg.rs  mod.rs
src/: main.rs  models.rs  serve.rs  state.rs
src/api/: account.rs  admin.rs  authentication.rs  books.rs  fs.rs  mod.rs  response.rs  user.rs
src/auth/: session.rs
src/database/: book.rs  chapter.rs  file.rs  library.rs  mod.rs  session.rs  user.rs
src/fs/: list_fs.rs  mod.rs
src/media/: ffmpeg.rs
src/util/: cover.rs  ffmpeg.rs  json.rs  list_fs.rs  mod.rs  password.rs  path.rs  random.rs  response.rs  send_file.rs  session.rs  storage.rs
tests/: auth.http  books.http  fs.http
web/: .eslintrc.cjs  .eslintrc.mjs  .prettierrc.json  index.html  main.ts  package-lock.json  package.json  vite.config.ts
web/app/: app.config.ts  app.html  app.spec.ts  app.ts
web/locales/: en.ftl
web/src/: Admin.tsx  Login.tsx  Player.tsx  Select.tsx  UserManagement.tsx  common.ts  locales.ts  main.tsx  store.ts  volume-patch.js
web/src/api/: account.ts  api.ts  authentication.ts  books.ts  fs.ts  library.ts  user.ts
web/src/book/: Book.tsx  BookDetails.tsx  Books.tsx  Library.tsx  NewBook.tsx
web/src/book/components/: BookList.tsx  FileList.tsx  FileSelect.tsx
web/src/layout/: App.tsx  Navbar.tsx  PlayerWrapper.tsx  Router.tsx  ThemeSwitcher.tsx
web/src/styles/: index.scss  navbar.scss  player.scss
web/src/user/: NewUser.tsx  UserEdit.tsx  UserManagement.tsx
web/src/user/components/: UserForm.tsx
