[package]
name = "freya"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["multipart"] }
dotenvy = "0.15.7"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.3"
rust-embed = { version = "8.2.0", features = ["mime-guess"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sqlx = { version = "0.8.3", features = [
  "sqlite",
  "runtime-tokio",
  "time",
  "migrate",
] }
time = { version = "0.3.31", features = ["serde", "formatting"] }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
  "time",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-cookies = "0.10.0"
axum_typed_multipart = "0.14.0"
anyhow = "1.0.79"
thiserror = "1.0.69"
tokio-util = { version = "0.7.10", features = ["io"] }

[build-dependencies]
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "migrate"] }
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.10.1"
