[package]
name = "freya"
version = "0.1.2"
edition = "2024"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "freya"
path = "server/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["multipart", "macros"] }
dotenvy = "0.15.7"
rand = "0.9.2"
regex = "1.10.3"
rust-embed = { version = "8.2.0", features = ["mime-guess"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sqlx = { version = "0.8.3", features = [
  "sqlite",
  "runtime-tokio",
  "time",
  "migrate",
] }
time = { version = "0.3.31", features = ["serde", "formatting"] }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
  "time",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-cookies = "0.11.0"
axum_typed_multipart = "0.16.3"
anyhow = "1.0.79"
thiserror = "2.0.14"
tokio-util = { version = "0.7.10", features = ["io"] }

[build-dependencies]
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "migrate"] }
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.10.1"
