[package]
name = "freya-migrate"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "8.2.0"
sqlx = { version = "0.7.3", features = ["sqlite", "macros"] }
tracing = "0.1.40"
